--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,29 @@
 .basket i {
   color: white;
 }
+
+.product-details .top #product-image {
+  width: 100%;
+  height: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.product-details .bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.product-details .bottom #add-to-basket {
+  margin-top: 10px;
+}
 /*# sourceMappingURL=style.css.map */
