--- a/css/style.css
+++ b/css/style.css
@@ -34,4 +34,22 @@
 .product-details .bottom #add-to-basket {
   margin-top: 10px;
 }
+
+.order {
+  margin-top: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.container {
+  max-width: 960px;
+}
 /*# sourceMappingURL=style.css.map */
